show coupon list with detail of selected category

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MVVM Example</string>
+    <string name="coupons_details_by_category">Coupons Details by category</string>
 </resources>
